# wasmagent-proxy

./: .gitignore  BOT_STATE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  check_git.py  check_git_state.py  check_state.py  test_git.py
.claude-bot/: verify.yml
.github/workflows/: ci.yml
benchmarks/: Cargo.toml  latency_bench.rs
benchmarks/src/: lib.rs
crates/aep-core/: Cargo.toml
crates/aep-core/benches/: latency_bench.rs
crates/aep-core/src/: evidence.rs  lib.rs  mcp_headers.rs  prov.rs  recording.rs  signing.rs
crates/proxy-wasm-evidence/: Cargo.toml
crates/proxy-wasm-evidence/src/: config.rs  filter.rs  lib.rs  recorder.rs
deploy/envoy/: envoy.yaml
deploy/istio/: wasmplugin.yaml
deploy/k8s/: configmap.yaml  signing-secret.yaml
docs/: 15-milestones.md  aep-evidence-format.md  architecture.md  configuration.md  deployment-model.md  deployment.md  mcp-protocol-compatibility.md  strategy.md
tmp/: git_check.sh
