[workspace]
resolver = "2"
members = [
  "crates/aep-core",
  "crates/proxy-wasm-evidence",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
repository   = "https://github.com/WasmAgent/wasmagent-proxy"

[workspace.dependencies]
# shared across all workspace crates
