[workspace]
members = [
    "crates/proxy-wasm-evidence",
    "crates/aep-core",
]
resolver = "2"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
repository   = "https://github.com/WasmAgent/wasmagent-proxy"
authors      = ["WasmAgent contributors"]

[profile.release]
opt-level = "z"
lto       = true
strip     = true

[profile.release.package."*"]
opt-level = "z"
