[package]
name        = "aep-core"
description = "AEP protocol types — RecordingMode, ActionEvidence, PROV-DM mappings (Rust)"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha2         = "0.10"
hex          = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand         = "0.8"
uuid         = { version = "1", features = ["v4"] }
log          = "0.4"

[lib]
doctest = false
