[package]
name        = "proxy-wasm-evidence"
description = "Proxy-Wasm HTTP filter — AEP evidence recording + capability policy enforcement"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable when building as a native binary for benchmarks/tests
native = []

[dependencies]
aep-core     = { path = "../aep-core" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
log          = "0.4"

# The Proxy-Wasm SDK (`proxy-wasm`) declares its host callbacks with
# `#[link(wasm_import_module = "env")]`; those imports exist only inside a
# Proxy-Wasm host (Envoy/Istio/Kong). On a native target the imports are left
# undefined, which Apple's linker rejects ("symbol(s) not found for
# architecture arm64") — GNU ld tolerates them, hence the macOS-only failure.
# Gate the SDK to `wasm32*` so native `cargo test`/`cargo clippy` link cleanly,
# and compile the HTTP-context entrypoint (`src/filter.rs`) only for Wasm.
[target.'cfg(target_arch = "wasm32")'.dependencies]
proxy-wasm   = "0.2"
